<?xml version="1.0"?>
<package>
  <name>keyboard</name>
  <version>0.1.1</version>
  <description>publishes keyboard key presses</description>
  <license>GPLv2</license>
  <url type="website">http://wiki.ros.org/keyboard</url>

  <maintainer email="phreakuencies@gmail.com">v01d</maintainer>
  <author email="phreakuencies@gmail.com">v01d</author>

  <!-- custom dependencies -->
  <build_depend>sdl</build_depend>
  <build_depend>ruby</build_depend>
  <run_depend>sdl</run_depend>

  <!-- standard dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
